chore: Update README.rst